[tool.poetry]
name = "video-indirme-sunucusu"
version = "0.1.0"
description = "YouTube, Twitter ve Instagram videolarını indirmek için bir FastAPI servisi."
authors = ["Adınız <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
pytube = "^15.0.0"
yt-dlp = "^2025.1.1"
instaloader = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"